--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <button>Get Exchange Rate</button>
         </form>
     </div>
-    <script src="code.js" charset="utf-8"></script>
+    <script src="countryList.js" charset="utf-8"></script>
     <script src="index.js" charset="utf-8"></script>
     
 </body>
